# sbridge

./: .prettierrc.json  README.md  package-lock.json  package.json
app/: controlButton.tsx  page.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
